Fixed Colors/Shape of Buttons, Reservation table align left, etc

--- a/likehome/src/Components/Auth/LoginSignup.css
+++ b/likehome/src/Components/Auth/LoginSignup.css
@@ -3,7 +3,7 @@
     border-radius: 30px;
     color: white;
     font-weight: bold;
-    background-color: green;   
+    background-color: #008b8b;   
 }
 
 h2 {
